# E-Commerce-Server

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: add_to_card.py  card_products_list.py  checkout.py  do_like.py  hello.py  products.py  remove_from_card.py
app/db/: filedb.py  mongodb_utils.py
app/models/: cart.py  product.py
