[tool.poetry]
name = "e-commerce-server"
version = "0.1.0"
description = "e-commerce server"
authors = ["Majid Fathi"]
readme = "README.md"
packages = [{include = "e_commerce_server"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.20.0"
fastapi = "^0.89.1"
pymongo = "^4.3.3"
pydantic = {extras = ["email"], version = "^1.10.4"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^0.21.0"
pyjwt = "^2.6.0"
bcrypt = "^4.0.1"
python-multipart = "^0.0.5"
python-jose = "^3.3.0"
gunicorn = "^20.1.0"
databases = "^0.7.0"
motor = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclued = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | alembic
)/
'''